tests/suppress_unused_lazy_2/suppress_unused_lazy_2.exp
Error -------------------------------------------------------------------------------------------------- cycle_b.js:15:1

Cannot cast `1` to string because number [1] is incompatible with string [2]. [incompatible-type]

   cycle_b.js:15:1
   15| 1 as string; // error
       ^ [1]

References:
   cycle_b.js:15:6
   15| 1 as string; // error
            ^^^^^^ [2]



Found 1 error

The Flow server is currently in lazy mode and is only checking 3/3 source files (+ 1/1 libdefs).
To learn more, visit flow.org/en/docs/lang/lazy-modes

========Skipping stats========
Merge skipped 0 of 3 modules
Check will skip 0 of 3 files
Error -------------------------------------------------------------------------------------------------- cycle_b.js:15:1

Cannot cast `1` to string because number [1] is incompatible with string [2]. [incompatible-type]

   cycle_b.js:15:1
   15| 1 as string; // error
       ^ [1]

References:
   cycle_b.js:15:6
   15| 1 as string; // error
            ^^^^^^ [2]



Found 1 error

The Flow server is currently in lazy mode and is only checking 3/3 source files (+ 1/1 libdefs).
To learn more, visit flow.org/en/docs/lang/lazy-modes

========Skipping stats========
Merge skipped 0 of 3 modules
Check will skip 1 of 3 files
